kubernetes/apps/travel/trek/networkpolicys/travel-trek-allow-eg-from-envoy-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: travel-trek-allow-eg-from-envoy-gateway
  namespace: travel
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: trek
  policyTypes:
    - Egress
  Engress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network
        podSelector:
          matchLabels:
            app.kubernetes.io/name: envoy
      ports:
        - protocol: TCP
          port: 10443
