kubernetes/apps/travel/trek/networkpolicys/travel-trek-allow-eg-to-coredns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: travel-trek-allow-eg-to-coredns
  namespace: travel
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: trek
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              app.kubernetes.io/name: coredns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
