kubernetes/apps/travel/trek/networkpolicys/travel-trek-allow-eg-to-world.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: travel-trek-allow-eg-to-world
  namespace: auth
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: trek
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - protocol: TCP
              port: "443"
