kubernetes/apps/travel/trek/networkpolicys/travel-trek-allow-ig-from-envoy-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: travel-trek-allow-ig-from-envoy-gateway
  namespace: trek
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: trek
  policyTypes:
    - Ingress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: network
        podSelector:
          matchLabels:
            app.kubernetes.io/name: envoy
      ports:
        - protocol: TCP
          port: 3000
